# mimiclaw

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  README_JA.md  partitions.csv  sdkconfig.defaults.esp32s3
docs/: ARCHITECTURE.md  CHANGELOG.md  GOOUUU_42针脚_0.91屏.md  GOOUUU_42针脚_1.54屏.md  TODO.md  VOICE_INTERACTION.md
main/: CMakeLists.txt  idf_component.yml  mimi.c  mimi_config.h  mimi_secrets.h.example
main/agent/: agent_loop.c  agent_loop.h  context_builder.c  context_builder.h
main/audio/: audio.c  audio.h
main/bus/: message_bus.c  message_bus.h
main/cli/: serial_cli.c
main/control/: control_plane.c  control_plane.h
main/cron/: cron_service.c  cron_service.h
main/display/: display.c  display.h  font_cjk.c  font_cjk.h  ssd1306.c  ssd1306.h  st7789.c  st7789.h
main/gateway/: ws_server.c  ws_server.h
main/heartbeat/: heartbeat_service.c  heartbeat_service.h
main/imu/: I2C_Driver.h
main/llm/: llm_proxy.c  llm_proxy.h
main/memory/: memory_store.c  memory_store.h
main/security/: access_control.c  access_control.h
main/telegram/: telegram_bot.c
main/tools/: tool_audio.c  tool_audio.h  tool_files.c  tool_files.h  tool_memory.c  tool_memory.h  tool_registry.c  tool_web_search.c
main/voice/: voice_channel.c  voice_channel.h
main/wifi/: wifi_manager.c
spiffs_data/config/: AGENTS.md  CRON.md  HEARTBEAT.md  IDENTITY.md  SKILLS.md  TOOLS.md
tools/: doc_regression.py  doc_regression_manifest.example.json  doc_regression_manifest.office.example.json  gen_font_bin.py  requirements.txt  run_doc_regression.sh  voice_gateway.py
tools/regression_samples/: README.md  food.csv  food.xlsx  notes.txt
